<?xml version="1.0"?>
<package format="2">
  <name>demo_minimal</name>
  <version>0.0.0</version>
  <description>The demo_minimal package</description>
  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
</package>
